--- a/李沐动手学深度学习test1.ipynb
+++ b/李沐动手学深度学习test1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "李沐动手学深度学习test1",
       "provenance": [],
-      "authorship_tag": "ABX9TyMpV+glRU+Mc207wCznCD4A",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMACoa5azeyJmc5yQWkF3eM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -810,6 +811,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "osvUDyW2BvtI"
+      },
+      "source": [
+        "大小为1的张量转换为Python标量"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "HTLa8Y8BFnfV",
@@ -833,6 +843,633 @@
           },
           "metadata": {},
           "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d-77yfkiCILm"
+      },
+      "source": [
+        "#数据预处理"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GxSh-HqOCmcZ"
+      },
+      "source": [
+        "1.创建数据集"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7tdoqZ6lCLFj"
+      },
+      "source": [
+        "import os\n",
+        "\n",
+        "os.makedirs(os.path.join('..','data'),exist_ok=True)\n",
+        "data_file = os.path.join('..','data','house_tiny.csv')\n",
+        "with open(data_file,'w') as f:\n",
+        "    f.write('NumRooms,Alley,Price\\n') #列名\n",
+        "    f.write('NA,Rave,127500\\n')   #每行表示一个数据样本\n",
+        "    f.write('2,NA,106000\\n')\n",
+        "    f.write('4,NA,178100\\n')\n",
+        "    f.write('NA,NA,140000\\n')"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lPVluWZiMHjy"
+      },
+      "source": [
+        "从创建的CSV文件中读取原始数据集"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EKqAbRbRMS1f",
+        "outputId": "3eb7f0af-c88b-412d-b310-4f82af187c41"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "data = pd.read_csv(data_file)\n",
+        "print(data)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   NumRooms Alley   Price\n",
+            "0       NaN  Rave  127500\n",
+            "1       2.0   NaN  106000\n",
+            "2       4.0   NaN  178100\n",
+            "3       NaN   NaN  140000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-dIlp_sYNR4i"
+      },
+      "source": [
+        "处理缺失的数据，典型的方法，*插值*与*删除* ，首先采用插值"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W_PyVc3mN7tl",
+        "outputId": "d4476a04-42f8-4081-b55c-fb99b2c8e76b"
+      },
+      "source": [
+        "inputs , outputs= data.iloc[:,0:2] , data.iloc[:,2]\n",
+        "inputs=inputs.fillna(inputs.mean())\n",
+        "print(inputs)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   NumRooms Alley\n",
+            "0       3.0  Rave\n",
+            "1       2.0   NaN\n",
+            "2       4.0   NaN\n",
+            "3       3.0   NaN\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "doSQc6KyaDTw"
+      },
+      "source": [
+        "```\n",
+        "data.iloc\n",
+        "```\n",
+        "\n",
+        "代表按照index查找\n",
+        "```\n",
+        "data.loc\n",
+        "```\n",
+        "loc代表按照行列名查找元素\n",
+        "\n",
+        "`mean()`代表对一列求其平均值"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c252-QrHa4un"
+      },
+      "source": [
+        "对于`iuput`中的类别值或者离散值，我们可以将NaN是为一个类别"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gx_L-gBual59",
+        "outputId": "802df8a2-b509-4364-94e9-4a5e2c0032e3"
+      },
+      "source": [
+        "inputs = pd.get_dummies(inputs,dummy_na=True)\n",
+        "print(inputs)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   NumRooms  Alley_Rave  Alley_nan\n",
+            "0       3.0           1          0\n",
+            "1       2.0           0          1\n",
+            "2       4.0           0          1\n",
+            "3       3.0           0          1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "229C_RumlFUR"
+      },
+      "source": [
+        "将inputs与outputs中转换为张量形式"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I3_hA8B9lL-Y",
+        "outputId": "28f884fe-11d4-41d8-9bf4-f464cfb9e81a"
+      },
+      "source": [
+        "import torch\n",
+        "X,y=torch.tensor(inputs.values),torch.tensor(outputs.values)\n",
+        "X,y"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[3., 1., 0.],\n",
+              "         [2., 0., 1.],\n",
+              "         [4., 0., 1.],\n",
+              "         [3., 0., 1.]], dtype=torch.float64),\n",
+              " tensor([127500, 106000, 178100, 140000]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N0yxBjbU7NTx"
+      },
+      "source": [
+        "#线形代数的简易实现\n",
+        "----\n",
+        "标量由只有一个元素的张量表示"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AuS6iuj57YyY",
+        "outputId": "644ea3b6-60aa-45fc-8245-ea78a81036e4"
+      },
+      "source": [
+        "import torch\n",
+        "\n",
+        "x = torch.tensor([3.0])\n",
+        "y = torch.tensor([2.0])\n",
+        "\n",
+        "x + y, x * y, x / y, x ** y"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([5.]), tensor([6.]), tensor([1.5000]), tensor([9.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "86mUk_Cw78U7"
+      },
+      "source": [
+        "向量（vector）可以视为由标量组成的列表"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V6GrF7Bv8GeN",
+        "outputId": "fb2abef4-c89f-4667-9e8a-e2b4e43bc146"
+      },
+      "source": [
+        "x = torch.arange(4)\n",
+        "x"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oR53_oZj8OR8"
+      },
+      "source": [
+        "我们可以通过索引来访问元素"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B07_mKvL8UEu",
+        "outputId": "d62ecc42-5aaf-48cb-d435-140b625be0b5"
+      },
+      "source": [
+        "x[3]   #通过索引访问元素"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([4]), tensor(3))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D7qaIXRR84mS"
+      },
+      "source": [
+        "获取张量长度"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hVVg8qXz88Hq",
+        "outputId": "bf238c71-370c-462e-b36d-c9c01030211c"
+      },
+      "source": [
+        "len(x)    #获取张量长度\n",
+        "\n",
+        "x.shape   #返回形状"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zhRj7gTL9UKy"
+      },
+      "source": [
+        "通过指定$m,n$来创建一个$m \\times n$ 的矩阵"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bKZAJ7t7_EXx",
+        "outputId": "919b9c46-2f68-4b11-a3ef-dfde2be3b64b"
+      },
+      "source": [
+        "A = torch.arange(20).reshape(5,4)\n",
+        "A"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 0,  1,  2,  3],\n",
+              "        [ 4,  5,  6,  7],\n",
+              "        [ 8,  9, 10, 11],\n",
+              "        [12, 13, 14, 15],\n",
+              "        [16, 17, 18, 19]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U1Tonr5wAMHZ"
+      },
+      "source": [
+        "转置操作"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MKnM1z55ARzI",
+        "outputId": "3a9fb11e-5836-4851-f55c-e5069f089345"
+      },
+      "source": [
+        "A.T"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 0,  4,  8, 12, 16],\n",
+              "        [ 1,  5,  9, 13, 17],\n",
+              "        [ 2,  6, 10, 14, 18],\n",
+              "        [ 3,  7, 11, 15, 19]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vLe0ED82AUlc"
+      },
+      "source": [
+        "向量推广到矩阵，通过矩阵构建更多维的数据结构"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nbDF39pbCI8Y",
+        "outputId": "0a29701a-09b5-4cd8-a592-bcf2c4323cf2"
+      },
+      "source": [
+        "X = torch.arange(24).reshape(2,3,4)\n",
+        "X"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0,  1,  2,  3],\n",
+              "         [ 4,  5,  6,  7],\n",
+              "         [ 8,  9, 10, 11]],\n",
+              "\n",
+              "        [[12, 13, 14, 15],\n",
+              "         [16, 17, 18, 19],\n",
+              "         [20, 21, 22, 23]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JM9MakU2CiWw",
+        "outputId": "baaf7829-4924-46a4-b1c0-c5c027680851"
+      },
+      "source": [
+        "A = torch.arange(20, dtype=torch.float32).reshape(5,4)\n",
+        "B = A.clone()    #通过分配新内存， 将A的一个副本分配给BB\n",
+        "A, A + B"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[ 0.,  1.,  2.,  3.],\n",
+              "         [ 4.,  5.,  6.,  7.],\n",
+              "         [ 8.,  9., 10., 11.],\n",
+              "         [12., 13., 14., 15.],\n",
+              "         [16., 17., 18., 19.]]), tensor([[ 0.,  2.,  4.,  6.],\n",
+              "         [ 8., 10., 12., 14.],\n",
+              "         [16., 18., 20., 22.],\n",
+              "         [24., 26., 28., 30.],\n",
+              "         [32., 34., 36., 38.]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nqAGPD7rD9sE"
+      },
+      "source": [
+        "两个矩阵元素乘法，即*哈达玛积*（数学符号$\\odot$）"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pEdoYYNZEXLz",
+        "outputId": "a1d6def0-90a0-4a70-d308-3627818d03b6"
+      },
+      "source": [
+        "A * B"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[  0.,   1.,   4.,   9.],\n",
+              "        [ 16.,  25.,  36.,  49.],\n",
+              "        [ 64.,  81., 100., 121.],\n",
+              "        [144., 169., 196., 225.],\n",
+              "        [256., 289., 324., 361.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0dGSeZI6Ed7m",
+        "outputId": "55a3eee3-e0f8-40aa-a7ad-26e397a5aa27"
+      },
+      "source": [
+        "a = 2\n",
+        "X = torch.arange(24).reshape(2 , 3 , 4)\n",
+        "a + X, (a * X).shape"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[[ 2,  3,  4,  5],\n",
+              "          [ 6,  7,  8,  9],\n",
+              "          [10, 11, 12, 13]],\n",
+              " \n",
+              "         [[14, 15, 16, 17],\n",
+              "          [18, 19, 20, 21],\n",
+              "          [22, 23, 24, 25]]]), torch.Size([2, 3, 4]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GE2ha3FOE3a7"
+      },
+      "source": [
+        "实现计算矩阵的元素和"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wiNO9S3yE592",
+        "outputId": "209eba69-58b7-44ae-c2e1-ce5c197a8cfc"
+      },
+      "source": [
+        "x = torch.arange(4, dtype=torch.float32)\n",
+        "x, x.sum()"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([0., 1., 2., 3.]), tensor(6.))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     }
