--- a/李沐动手学深度学习test1.ipynb
+++ b/李沐动手学深度学习test1.ipynb
@@ -6,7 +6,7 @@
       "name": "李沐动手学深度学习test1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMACoa5azeyJmc5yQWkF3eM",
+      "authorship_tag": "ABX9TyM1hQf5eGtpbdB8Ru3kiYLS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -503,7 +503,7 @@
         "outputId": "45958825-9505-4b75-ab66-00d3f2e6a60b"
       },
       "source": [
-        " a = torch.arange(3).reshape((3, 1))\n",
+        "a = torch.arange(3).reshape((3, 1))\n",
         "b = torch.arange(2).reshape((1, 2))\n",
         "a, b"
       ],
@@ -881,7 +881,7 @@
         "    f.write('4,NA,178100\\n')\n",
         "    f.write('NA,NA,140000\\n')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -908,7 +908,7 @@
         "data = pd.read_csv(data_file)\n",
         "print(data)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +946,7 @@
         "inputs=inputs.fillna(inputs.mean())\n",
         "print(inputs)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1002,7 +1002,7 @@
         "inputs = pd.get_dummies(inputs,dummy_na=True)\n",
         "print(inputs)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1040,7 +1040,7 @@
         "X,y=torch.tensor(inputs.values),torch.tensor(outputs.values)\n",
         "X,y"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1066,7 @@
       "source": [
         "#线形代数的简易实现\n",
         "----\n",
-        "标量由只有一个元素的张量表示"
+        "##标量由只有一个元素的张量表示"
       ]
     },
     {
@@ -1076,7 +1076,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AuS6iuj57YyY",
-        "outputId": "644ea3b6-60aa-45fc-8245-ea78a81036e4"
+        "outputId": "2fdf586c-e324-4cd6-ff6e-e05a8248f7ff"
       },
       "source": [
         "import torch\n",
@@ -1086,7 +1086,7 @@
         "\n",
         "x + y, x * y, x / y, x ** y"
       ],
-      "execution_count": 7,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1096,7 +1096,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 1
         }
       ]
     },
@@ -1116,13 +1116,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V6GrF7Bv8GeN",
-        "outputId": "fb2abef4-c89f-4667-9e8a-e2b4e43bc146"
+        "outputId": "f26350d2-3d41-4141-eec1-903652fa5c03"
       },
       "source": [
         "x = torch.arange(4)\n",
         "x"
       ],
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1132,7 +1132,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 2
         }
       ]
     },
@@ -1152,22 +1152,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B07_mKvL8UEu",
-        "outputId": "d62ecc42-5aaf-48cb-d435-140b625be0b5"
+        "outputId": "1ba364ea-cf7f-46ad-fceb-3344a6497797"
       },
       "source": [
         "x[3]   #通过索引访问元素"
       ],
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(torch.Size([4]), tensor(3))"
+              "tensor(3)"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 3
         }
       ]
     },
@@ -1187,14 +1187,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hVVg8qXz88Hq",
-        "outputId": "bf238c71-370c-462e-b36d-c9c01030211c"
+        "outputId": "acc6122f-b13b-47e0-b310-8a06dc46db83"
       },
       "source": [
         "len(x)    #获取张量长度\n",
         "\n",
         "x.shape   #返回形状"
       ],
-      "execution_count": 14,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1204,7 +1204,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 4
         }
       ]
     },
@@ -1224,13 +1224,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bKZAJ7t7_EXx",
-        "outputId": "919b9c46-2f68-4b11-a3ef-dfde2be3b64b"
+        "outputId": "1a1bfd33-c9b9-4a39-a329-737c8b71ea40"
       },
       "source": [
         "A = torch.arange(20).reshape(5,4)\n",
         "A"
       ],
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1244,7 +1244,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 5
         }
       ]
     },
@@ -1264,12 +1264,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MKnM1z55ARzI",
-        "outputId": "3a9fb11e-5836-4851-f55c-e5069f089345"
+        "outputId": "83571684-f309-4ef8-d62d-9251602f6c91"
       },
       "source": [
         "A.T"
       ],
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1282,7 +1282,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 6
         }
       ]
     },
@@ -1302,13 +1302,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nbDF39pbCI8Y",
-        "outputId": "0a29701a-09b5-4cd8-a592-bcf2c4323cf2"
+        "outputId": "8e63e8f6-4c21-414d-f51f-5f460566c072"
       },
       "source": [
         "X = torch.arange(24).reshape(2,3,4)\n",
         "X"
       ],
-      "execution_count": 18,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1324,7 +1324,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 7
         }
       ]
     },
@@ -1335,14 +1335,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JM9MakU2CiWw",
-        "outputId": "baaf7829-4924-46a4-b1c0-c5c027680851"
+        "outputId": "83614f75-1724-4b23-c4f4-d455f443476a"
       },
       "source": [
         "A = torch.arange(20, dtype=torch.float32).reshape(5,4)\n",
         "B = A.clone()    #通过分配新内存， 将A的一个副本分配给BB\n",
         "A, A + B"
       ],
-      "execution_count": 21,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1360,7 +1360,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 37
         }
       ]
     },
@@ -1380,12 +1380,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pEdoYYNZEXLz",
-        "outputId": "a1d6def0-90a0-4a70-d308-3627818d03b6"
+        "outputId": "6eba500f-7f1b-4846-f9d1-d546f9c71779"
       },
       "source": [
         "A * B"
       ],
-      "execution_count": 22,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1399,7 +1399,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 9
         }
       ]
     },
@@ -1410,14 +1410,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0dGSeZI6Ed7m",
-        "outputId": "55a3eee3-e0f8-40aa-a7ad-26e397a5aa27"
+        "outputId": "937c4287-2524-4d78-e46d-88130ea24e0f"
       },
       "source": [
         "a = 2\n",
         "X = torch.arange(24).reshape(2 , 3 , 4)\n",
         "a + X, (a * X).shape"
       ],
-      "execution_count": 24,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1433,7 +1433,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 10
         }
       ]
     },
@@ -1453,13 +1453,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wiNO9S3yE592",
-        "outputId": "209eba69-58b7-44ae-c2e1-ce5c197a8cfc"
+        "outputId": "a8260de5-eb8c-4921-f179-63f894404086"
       },
       "source": [
         "x = torch.arange(4, dtype=torch.float32)\n",
         "x, x.sum()"
       ],
-      "execution_count": 25,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1469,7 +1469,285 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g6SOdxkD4Zcz"
+      },
+      "source": [
+        "表示任意形状张量的元素和"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i-kZZYzq5Fnh",
+        "outputId": "0ac0bd51-1940-456a-8359-48afb990d970"
+      },
+      "source": [
+        "##A = torch.arange(20*2, dtype=torch.float32).reshape(2,5,4)\n",
+        "##A.shape, A.sum(), A"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([2, 5, 4]), tensor(780.), tensor([[[ 0.,  1.,  2.,  3.],\n",
+              "          [ 4.,  5.,  6.,  7.],\n",
+              "          [ 8.,  9., 10., 11.],\n",
+              "          [12., 13., 14., 15.],\n",
+              "          [16., 17., 18., 19.]],\n",
+              " \n",
+              "         [[20., 21., 22., 23.],\n",
+              "          [24., 25., 26., 27.],\n",
+              "          [28., 29., 30., 31.],\n",
+              "          [32., 33., 34., 35.],\n",
+              "          [36., 37., 38., 39.]]]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A_sum_axis1 = A.sum(axis=1)\n",
+        "A_sum_axis1, A_sum_axis1.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CECI5Trx9Y2y",
+        "outputId": "b9225239-037b-482a-96a3-e7aa951acc51"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[ 40,  45,  50,  55],\n",
+              "         [140, 145, 150, 155]]), torch.Size([2, 4]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.sum(axis=[0,1 ]).shape    #将0，1两个维度进行降维"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yNOBu1C_DObE",
+        "outputId": "b6c5520f-70c1-40be-afa3-5fa515ca1208"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lmh8ttQr5fHg"
+      },
+      "source": [
+        "指定求和会“汇总”张量的轴"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A_sum_axis0 = A.sum(axis=0)\n",
+        "A_sum_axis0, A_sum_axis0.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yd4yQIEF4w4y",
+        "outputId": "849f051a-cda0-4a88-b118-abdd45d8ac98"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([40., 45., 50., 55.]), torch.Size([4]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "平均值操作（mean或average）"
+      ],
+      "metadata": {
+        "id": "wOviTCq95Oq5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.mean() , A.sum() / A.numel()      #使用【2，5，4】的高维矩阵报错，使用20代码块处的A不会报错.  解决：float32可解决，mean()要求要使用浮点数"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DzcCA9-r5UyZ",
+        "outputId": "398e34d9-60db-4db8-c354-5cbac0d73815"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(9.5000), tensor(9.5000))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.mean(axis=0), A.sum(axis=0) / A.shape[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qxc4WHeZHiYP",
+        "outputId": "770f10c0-66af-4687-80ea-6ae465969b72"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([ 8.,  9., 10., 11.]), tensor([ 8.,  9., 10., 11.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###计算总和或均值时保持轴数不变，以便应用广播机制"
+      ],
+      "metadata": {
+        "id": "zAtHq3TNK2VP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum_A1 = A.sum(axis=1, keepdim=True)     #应用广播机制\n",
+        "\n",
+        "sum_A2 = A.sum(axis=1)\n",
+        "\n",
+        "print(sum_A1, sum_A1.shape)\n",
+        "print(sum_A2, sum_A2.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nv_ccNPZLBco",
+        "outputId": "82aedb92-76d9-4aab-8084-b0b3d5ae587c"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[ 6.],\n",
+            "        [22.],\n",
+            "        [38.],\n",
+            "        [54.],\n",
+            "        [70.]]) torch.Size([5, 1])\n",
+            "tensor([ 6., 22., 38., 54., 70.]) torch.Size([5])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###沿某一个轴计算A元素的累积总和"
+      ],
+      "metadata": {
+        "id": "980FDSHwOgJJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.cumsum(axis=0)  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZzT2CBhyOozK",
+        "outputId": "78aeba62-23e8-4eb0-f8a9-6f8ae6bbf314"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 0.,  1.,  2.,  3.],\n",
+              "        [ 4.,  6.,  8., 10.],\n",
+              "        [12., 15., 18., 21.],\n",
+              "        [24., 28., 32., 36.],\n",
+              "        [40., 45., 50., 55.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
         }
       ]
     }
